# ProbabilisticCancerPrediction

./: .gitignore  README.md  app.py  benchmark_tiempos.py  config.py  data.py  evaluate.py  find_demo_images.py  main.py  metrics.py  models.py  prueba.py  pyproject.toml  requirements.txt  run_final.txt  train.py  visualize.py
ReportLaTeX/: neurips_2025.aux  neurips_2025.fdb_latexmk  neurips_2025.fls  neurips_2025.out  neurips_2025.sty  neurips_2025.tex  references.bib
demo_images/: demo_summary.json
results/: deterministic_training_history.json  evaluation_results.json  final_results.json  laplace_fit_history.json  mc_dropout_training_history.json  timing_benchmark.json  training_histories.json  training_history.json  uncertainty_report.txt  uncertainty_thresholds.json
results/data_splits/: split_metadata.json  test_split.csv  val_split.csv
